# collabserver-client

./: .gitignore  .gitmodules  .todo  .travis.yml  CMakeLists.txt  Doxyfile  README.md  build.sh
CMake/: AddDependencies.cmake  AddExamples.cmake  AddTests.cmake
CMake/Dependencies/: AddGoogleTest.cmake
CMake/ExternalProjects/: CollabCommon.cmake  Collabcommon.cmake  Collabdata.cmake  GoogleTest.cmake
examples/: exampleClient.cpp
include/collabclient/: Client.h  DataID.h
src/: Client.cpp  DataID.cpp  ServerConnection.cpp  ServerConnection.h  constants.h
src/network/: MessageFactory.cpp
src/utils/: Uncopyable.h
test/: Test_Client.cpp
tests/: Test_Client.cpp
